[package]
name = "scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
tokio = { version = "1", features = ["full", "tracing"] }
itertools = "0.12.0"
dyn-clone = "1.0.16"
tracing = { version = "0.1.40", features = ["log"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
chrono-tz = { version = "0.8.4", features = ["serde"] }
